Identifiers Link Controllers With the DOM

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <script src="bundle.js" async></script>
 </head>
 <body>
-  <div>
+  <div data-controller="hello">
     <input type="text">
     <button>Greet</button>
   </div>
