Actions Respond to DOM Events

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body>
   <div data-controller="hello">
     <input type="text">
-    <button>Greet</button>
+    <button data-action="click->hello#greet">Greet</button>
   </div>
 </body>
 </html>
