--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div data-controller="hello">
-    <input type="text">
+    <input data-target="hello.name" type="text">
     <button data-action="click->hello#greet">Greet</button>
   </div>
 </body>
