--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
   <script src="bundle.js" async></script>
 </head>
 <body>
-  <h1 data-controller="example"></h1>
+  <div>
+    PIN: <input type="text" value="1234" readonly>
+    <button>Copy to Clipboard</button>
+  </div>
 </body>
 </html>
