--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div data-controller="clipboard">
-    PIN: <input type="text" value="1234" readonly>
+    PIN: <input data-target="clipboard.source" type="text" value="1234" readonly>
     <button>Copy to Clipboard</button>
   </div>
 </body>
