--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body>
   <div data-controller="clipboard">
     PIN: <input data-target="clipboard.source" type="text" value="1234" readonly>
-    <button>Copy to Clipboard</button>
+    <button data-action="clipboard#copy">Copy to Clipboard</button>
   </div>
 </body>
 </html>
