--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <button data-action="clipboard#copy" class="clipboard-button">Copy to Clipboard</button>
   </div>
   <div data-controller="clipboard">
-    PIN: <input data-target="clipboard.source" type="text" value="3737" readonly>
-    <button data-action="clipboard#copy" class="clipboard-button">Copy to Clipboard</button>
+    PIN: <textarea data-target="clipboard.source" readonly>3737</textarea>
+    <a href="#" data-action="clipboard#copy" class="clipboard-button">Copy to Clipboard</a>
   </div>
 </body>
 </html>
