--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <div data-controller="content-loader"
-     data-content-loader-url="/messages.html"></div>
+  data-content-loader-url="/messages.html"
+  data-content-loader-refresh-interval="5000"></div>
 </body>
 </html>
